--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=learning-navigator
 server.port=8989
-spring.datasource.url=jdbc:mysql://localhost:3306/learning_navigator?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/learning-navigator?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=Gwen@01632
 spring.jpa.hibernate.ddl-auto=update
